--- a/main.css
+++ b/main.css
@@ -49,7 +49,7 @@ ul {
 }
 
 .text-secondary {
-    color:#b8bbbf;
+    color: #b8bbbf;
 }
 
 .cv:hover {
@@ -99,13 +99,18 @@ ul {
     color: #05879c;
 }
 
+.repl {
+  display: inline-block;
+  vertical-align: middle;
+}
+
 .typing {
-    width: 40ch;
+    width: 17ch;
     overflow: hidden;
     white-space: nowrap;
     border-right: 10px solid #b8bbbf;
     animation:
-        typing 2s steps(30, end),
+        typing 2s steps(17, end),
         blink .5s step-end infinite;
 }
 
@@ -119,7 +124,7 @@ ul {
 
 @keyframes typing {
 0% { width: 0; }
-100% { width: 40ch; }
+100% { width: 17ch; }
 }
 
 @keyframes blink {
