feat(font-preload): try preload & swap tactic

--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 @font-face {
     font-family: "VT323";
     src: url("assets/fonts/VT323.woff2") format("woff2");
+    font-display: swap;
 }
 
 * {
