--- a/main.css
+++ b/main.css
@@ -29,20 +29,25 @@ h3 {
     color: #000000;
 }
 
-a {
-    text-decoration: none;
-}
-
-ul {
-    list-style-type: square;
-}
-
 .option:hover {
     display: inline-block;
     font-size: inherit;
     padding: 0 0.5em;
     margin-bottom: 0;
     background-color: #b8bbbf;
+}
+
+.repl {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style-type: square;
 }
 
 .text-background {
@@ -67,12 +72,6 @@ ul {
 
 .cursor {
     color: #b8bbbf;
-}
-
-.output {
-    width: 100%;
-    max-width: 80ch;
-    animation: fade 4s;
 }
 
 .command {
@@ -100,11 +99,6 @@ ul {
     color: #05879c;
 }
 
-.repl {
-  display: inline-block;
-  vertical-align: middle;
-}
-
 .typing {
     width: 17ch;
     overflow: hidden;
@@ -113,6 +107,14 @@ ul {
     animation:
         typing 2s steps(17, end),
         blink .5s step-end infinite;
+    animation-play-state: paused;
+}
+
+.output {
+    width: 100%;
+    max-width: 80ch;
+    animation: fade 4s;
+    animation-play-state: paused;
 }
 
 /* animation */
@@ -132,7 +134,6 @@ ul {
 50% { border-color: transparent; }
 }
 
-/* dynamic resizing */
 @media (min-width:600px) {
     body {
         font-size: 1.75rem;
